--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,21 @@
     box-sizing: border-box;
 }
 
+/* header */
+
 header{
     padding: 15px 50px;
     background-color: rgb(156, 194, 208);
 }
 
 .container{
-    max-width: 700px;
+    max-width: 800px;
     margin: 0 auto;
     display: flex;
 }
 
 .left-col{
-    width: 20%;
+    width: 25%;
     text-align: left;
 }
 
@@ -26,7 +28,7 @@ header{
 }
 
 .right-col{
-    width: 20%;
+    width: 25%;
     text-align: right;
 }
 
@@ -36,4 +38,26 @@ header{
 
 .box-border{
     border: 1px dashed black;
+    height: 100%;
+}
+
+/* corpo principale */
+
+.bg-blue{
+    background-color: rgb(0, 0, 137);
+    width: 100%;
+}
+
+.container2{
+    max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+    padding: 30px 0px;
+}
+
+.bg-pink{
+    background-color: rgb(231, 126, 230);
+    height: 280px;
+    width: 100%;
+
 }
