--- a/css/style.css
+++ b/css/style.css
@@ -37,16 +37,11 @@ header{
 }
 
 .box-border{
-    border: 1px dashed black;
+    border: 1.5px dashed black;
     height: 100%;
 }
 
 /* corpo principale */
-
-.bg-blue{
-    background-color: rgb(0, 0, 137);
-    width: 100%;
-}
 
 .container2{
     max-width: 600px;
@@ -55,9 +50,63 @@ header{
     padding: 30px 0px;
 }
 
-.bg-pink{
+/* background colors */
+
+.bg-darkblue{
+    background-color: rgb(0, 0, 137);
+    width: 100%;
+}
+
+.bg-darkpink{
     background-color: rgb(231, 126, 230);
     height: 280px;
     width: 100%;
 
 }
+
+.bg-white{
+    background-color: white;
+    width: 100%;
+}
+
+.bg-blue{
+    background-color: rgb(30, 143, 255);
+    width: 100%;
+}
+
+.bg-pink{
+    background-color: rgb(255, 192, 202);
+    width: 100%;
+}
+
+.bg-grey{
+    background-color: rgb(191, 191, 191);
+    width: 100%;
+}
+
+.bg-green{
+    background-color: rgb(33, 139, 33);
+    width: 100%;
+}
+
+.bg-darkgrey{
+    background-color: rgb(35, 39, 42);
+    width: 100%;
+}
+
+.bg-salmon{
+    background-color: rgb(240, 129, 127);
+    width: 100%;
+}
+
+.bg-acquamarina{
+    background-color: rgb(32, 179, 170);
+    width: 100%;
+}
+
+.bg-lightgreen{
+    background-color: rgb(114, 225, 184);
+    width: 100%;
+}
+
+/* fine background colors */
