--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header{
     max-width: 800px;
     margin: 0 auto;
     display: flex;
+    padding: 30px 0px;
 }
 
 .left-col{
@@ -32,10 +33,6 @@ header{
     text-align: right;
 }
 
-.bg-gold{
-    background-color: goldenrod;
-}
-
 .box-border{
     border: 1.5px dashed black;
     height: 100%;
@@ -51,6 +48,10 @@ header{
 }
 
 /* background colors */
+
+.bg-gold{
+    background-color: goldenrod;
+}
 
 .bg-darkblue{
     background-color: rgb(0, 0, 137);
@@ -71,12 +72,14 @@ header{
 
 .bg-blue{
     background-color: rgb(30, 143, 255);
-    width: 100%;
+    height: 280px;
+    width: 60%;
 }
 
 .bg-pink{
     background-color: rgb(255, 192, 202);
-    width: 100%;
+    height: 280px;
+    width: 40%;
 }
 
 .bg-grey{
