--- a/css/style.css
+++ b/css/style.css
@@ -21,16 +21,19 @@ header{
 .left-col{
     width: 25%;
     text-align: left;
+    padding: 5px;
 }
 
 .central-col{
     width: 50%;
     text-align: center;
+    padding: 5px;
 }
 
 .right-col{
     width: 25%;
     text-align: right;
+    padding: 5px;
 }
 
 .box-border{
@@ -47,11 +50,15 @@ header{
     padding: 30px 0px;
 }
 
-.mirror-box{
+.row-reverse{
     flex-direction: row-reverse;
 }
 
 /* background colors */
+
+.width-full{
+    width: 100%;
+}
 
 .bg-gold{
     background-color: goldenrod;
@@ -59,19 +66,15 @@ header{
 
 .bg-darkblue{
     background-color: rgb(0, 0, 137);
-    width: 100%;
 }
 
 .bg-darkpink{
     background-color: rgb(231, 126, 230);
     height: 300px;
-    width: 100%;
-
 }
 
 .bg-white{
     background-color: white;
-    width: 100%;
 }
 
 .bg-blue{
@@ -88,18 +91,15 @@ header{
 
 .bg-grey{
     background-color: rgb(191, 191, 191);
-    width: 100%;
 }
 
 .bg-green{
     background-color: rgb(33, 139, 33);
-    width: 100%;
     height: 600px;
 }
 
 .bg-darkgrey{
     background-color: rgb(35, 39, 42);
-    width: 100%;
 }
 
 .bg-salmon{
@@ -116,7 +116,23 @@ header{
 
 .bg-lightgreen{
     background-color: rgb(114, 225, 184);
-    width: 100%;
 }
 
 /* fine background colors */
+
+/* footer */
+
+.container3{
+    max-width: 800px;
+    margin: 0 auto;
+    display: flex;
+    padding: 30px 0px;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.bg-pink2{
+    background-color: rgb(255, 192, 202);
+}
