--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 /* header */
 
 header{
-    padding: 15px 50px;
     background-color: rgb(156, 194, 208);
 }
 
@@ -15,7 +14,7 @@ header{
     max-width: 800px;
     margin: 0 auto;
     display: flex;
-    padding: 30px 0px;
+    padding: 10px 0px;
 }
 
 .left-col{
@@ -45,6 +44,13 @@ header{
 
 .container2{
     max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+    padding: 30px 0px;
+}
+
+.container3{
+    max-width: 800px;
     margin: 0 auto;
     display: flex;
     padding: 30px 0px;
